### 🧹 JEP 439: Generational ZGC